# vis

./: .gitignore  pyproject.toml  setup.py  vis.toml
vis/: audio_visualizer.py  collatz.py  collatz_two.py  color_quantization.py  fractals.py  geometric_convergence.py  image_interpolation.py  prime_snake.py  prime_spiral.py  sunshine.py
vis/draw/: butterfly.py  color_quantization.py  edges.py  image_interpolation.py  stained_glass.py
vis/draw/animation/: sierpinski.py
vis/draw/animation/full_songs/: storm.py
vis/draw/animation/misc/: loudness.py  prime_spiral.py  sunshine.py
vis/draw/animation/moon/: moon.py
vis/draw/animation/storm/: storm.py
vis/draw/audio/: new_audio.py
vis/draw/image_analysis/: image_interpolation.py
vis/draw/misc/: chaos_knob.py  chaos_knob_gui.py  delete_iframes.py  draw_circles.py  emboss.py  gen.py  librosa_new.py  line_test.py  mean_shift.py  pipe_test.py  pitch_detection_debug.py  random_cv_stuff.py
vis/draw/misc/animations/: geometric_convergence.py  polygonal_polyrhythms.py
vis/draw/misc/audio/: aubio_asdf.py  librosa_new.py
vis/lib/: animation_utils.py  argparse_utils.py  audio_utils.py  drawing_utils.py  image_utils.py  math_utils.py  score_utils.py  video_utils.py
vis/lib/score_callbacks/: load_barlines.py  load_margins.py  load_staff.py
vis/utils/: drawing_utils.py
